added filter fab buttons

--- a/src/app/pages/user/discover/discover.page.html
+++ b/src/app/pages/user/discover/discover.page.html
@@ -74,4 +74,21 @@
       </ion-card>
     </ion-row>
   </ion-grid>
+
+  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="options-outline"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="top">
+      <ion-fab-button>
+        All
+      </ion-fab-button>
+      <ion-fab-button>
+        Individual
+      </ion-fab-button>
+      <ion-fab-button>
+        Group
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
 </ion-content>
