--- a/src/app/pages/user/discover/discover.page.html
+++ b/src/app/pages/user/discover/discover.page.html
@@ -80,13 +80,13 @@
       <ion-icon name="options-outline"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
-      <ion-fab-button>
+      <ion-fab-button (click)="changeFilterOption('all')">
         All
       </ion-fab-button>
-      <ion-fab-button>
+      <ion-fab-button (click)="changeFilterOption('individual')">
         Individual
       </ion-fab-button>
-      <ion-fab-button>
+      <ion-fab-button (click)="changeFilterOption('group')">
         Group
       </ion-fab-button>
     </ion-fab-list>
