--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -922,7 +922,7 @@
   <ion-toolbar *ngIf="loadStatus && setupPermissionCompleted && showPreview && (moment && moment.array_boolean && moment.array_boolean.length > 1) && moment.array_boolean[1]"> <!--if shared in marketplace as a template and non-participanting-->
     <ion-button expand="block" shape="round" (click)="cloneActivity($event)" color="primary">Join</ion-button>
   </ion-toolbar>
-  <ion-toolbar *ngIf="loadStatus && setupPermissionCompleted && !joinDisabled && authService.token && !token && showPreview && (moment && moment.array_boolean.length > 1) && !moment.array_boolean[1]"> <!--if not a template and and non-participanting-->
+  <ion-toolbar *ngIf="loadStatus && setupPermissionCompleted && !joinDisabled && !token && showPreview && (moment && moment.array_boolean.length > 1) && !moment.array_boolean[1]"> <!--if not a template and and non-participanting-->
     <ion-button expand="block" shape="round" (click)="joinActivity()" color="primary">Join</ion-button>
   </ion-toolbar>
 </ion-footer>
