--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -127,12 +127,12 @@
         </div>
         <ion-icon name="chevron-down-outline" color="primary" slot="end"></ion-icon>
       </ion-item>
-      <!--Not yet Joined and not a marketplace template - permission check-->
-      <!--<ion-item id="click-to-join" *ngIf="authService.token && !token && !hasParticipantAccess && !hasOrganizerAccess && !hasLeaderAccess && (moment.array_boolean.length > 1) && !moment.array_boolean[1]" (click)="joinActivity()" lines="none" class="cursor-pointer">
+      <!--If showPreview is not enabled, non-participating, and not template - permission check-->
+      <ion-item id="click-to-join" *ngIf="authService.token && !token && !showPreview && !hasParticipantAccess && !hasOrganizerAccess && !hasLeaderAccess && (moment.array_boolean.length > 1) && !moment.array_boolean[1]" (click)="joinActivity()" lines="none" class="cursor-pointer">
         <ion-icon name="person" slot="start" color="danger"></ion-icon>
         <ion-label class="ion-margin-top">Click to join {{moment.resource['en-US'].value[0]}}</ion-label>
         <ion-icon name="chevron-forward-outline" color="primary" slot="end"></ion-icon>
-      </ion-item>-->
+      </ion-item>
     </div>
     <!--Privileges View-->
     <div *ngIf="expandedPrivilegesView && hasOrganizerAccess" lines="none">
@@ -923,6 +923,6 @@
     <ion-button expand="block" shape="round" (click)="cloneActivity($event)" color="primary">Join</ion-button>
   </ion-toolbar>
   <ion-toolbar *ngIf="loadStatus && setupPermissionCompleted && !joinDisabled && !token && showPreview && (moment && moment.array_boolean.length > 1) && !moment.array_boolean[1]"> <!--if not a template and and non-participanting-->
-    <ion-button expand="block" shape="round" (click)="joinActivity()" color="primary">Join</ion-button>
+    <ion-button expand="block" shape="round" (click)="joinActivity()" color="primary" id="click-to-join">Join</ion-button>
   </ion-toolbar>
 </ion-footer>
