change filter button color to "light"

--- a/src/app/pages/user/discover/discover.page.html
+++ b/src/app/pages/user/discover/discover.page.html
@@ -76,7 +76,7 @@
   </ion-grid>
 
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-    <ion-fab-button class="filter-button">
+    <ion-fab-button class="filter-button" color="light">
       Filter <ion-icon name="options-outline" style="margin-left: 10px;"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
