--- a/src/app/pages/user/discover/discover.page.html
+++ b/src/app/pages/user/discover/discover.page.html
@@ -77,17 +77,26 @@
 
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
     <ion-fab-button class="filter-button" color="light">
-      Filter <ion-icon name="options-outline" style="margin-left: 10px;"></ion-icon>
+      <span *ngIf="filterOption === 'all'">
+        Filter
+      </span>
+      <span *ngIf="filterOption === 'group'">
+        Group Plans
+      </span>
+      <span *ngIf="filterOption === 'individual'">
+        Individual Plans
+      </span>
+      <ion-icon name="options-outline" style="margin-left: 10px;"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
       <ion-fab-button (click)="changeFilterOption('all')" class="first-button">
-        All
+        All Plans
       </ion-fab-button>
       <ion-fab-button (click)="changeFilterOption('individual')">
-        Individual
+        Individual Plans
       </ion-fab-button>
       <ion-fab-button (click)="changeFilterOption('group')" class="last-button">
-        Group
+        Group Plans
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
