made filter popup white

--- a/src/app/pages/user/discover/discover.page.scss
+++ b/src/app/pages/user/discover/discover.page.scss
@@ -45,6 +45,7 @@ app-discover {
     margin: 0;
     --border-radius: 0;
     --box-shadow: none;
+    --background-color: white;
   }
 
   .filter-button {
