--- a/src/app/pages/user/discover/discover.page.scss
+++ b/src/app/pages/user/discover/discover.page.scss
@@ -45,7 +45,7 @@ app-discover {
     margin: 0;
     --border-radius: 0;
     --box-shadow: none;
-    --background-color: white;
+    --background: white;
   }
 
   .filter-button {
