--- a/src/app/pages/feature/editfeature/editfeature.page.html
+++ b/src/app/pages/feature/editfeature/editfeature.page.html
@@ -391,6 +391,35 @@
               <ion-checkbox [(ngModel)]="moment.matrix_number[i][3]"></ion-checkbox>
             </ion-item>
           </ion-item-group>
+          <!--Learning-->
+          <ion-item-group *ngIf="item === 10220">
+            <ion-item lines="none">
+              <ion-label class="moment-input">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][0]}}</ion-label>
+            </ion-item>
+            <!--<ion-item lines="none"> &lt;!&ndash;To-Do Label&ndash;&gt;
+              <ion-label class="ion-margin-left">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][14]}}</ion-label>
+              <ion-input class="ion-text-end" type="text" maxlength="8" [placeholder]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][15]" [(ngModel)]="moment.matrix_string[i][2]" (ionChange)="moment.matrix_string[i][2] = moment.matrix_string[i][2] || resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][15]" debounce="50"></ion-input>
+            </ion-item>
+            <ion-item lines="none"> &lt;!&ndash;To-Do Moment Id&ndash;&gt;
+              <ion-label class="ion-margin-left">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][16]}}</ion-label>
+              <ion-input class="ion-text-end" type="text" maxlength="24" [placeholder]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][17]" [(ngModel)]="moment.matrix_string[i][3]" (ionChange)="moment.matrix_string[i][3] = moment.matrix_string[i][3] || resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][17]" debounce="50"></ion-input>
+            </ion-item>-->
+            <ion-item lines="none"> <!--Allow unauthenticated access to To-Do's Content-->
+              <ion-label>Allow Unauthenticated Access</ion-label>
+              <ion-toggle [(ngModel)]="moment.array_boolean[10]"></ion-toggle>
+            </ion-item>
+            <ion-item lines="none"> <!--Response Type-->
+              <ion-label style="width: 90%" slot="start">Response Type</ion-label>
+              <ion-select [interfaceOptions]="{cssClass: 'level-15'}" interface="alert" [(ngModel)]="moment.matrix_number[i][5]" slot="end" [placeholder]="'Collaborative'">
+                <ion-select-option [value]=0>Collaborative</ion-select-option> <!--Default: Collaborative-->
+                <ion-select-option [value]=1>Private</ion-select-option> <!--Private-->
+              </ion-select>
+            </ion-item>
+            <ion-item lines="none"> <!--Enable the Upcoming Section-->
+              <ion-label class="ion-margin-left">Enable the Upcoming Section</ion-label>
+              <ion-checkbox [(ngModel)]="moment.matrix_number[i][0]"></ion-checkbox>
+            </ion-item>
+          </ion-item-group>
           <!--Textarea + Media-->
           <ion-item *ngIf="item === 10010" lines="none"> <!--textarea media section, slider view only, or if media has already been added from before-->
             <ion-label class="moment-input">Text</ion-label>
