--- a/src/app/pages/feature/manage/feature-creator/feature-creator.page.html
+++ b/src/app/pages/feature/manage/feature-creator/feature-creator.page.html
@@ -33,7 +33,7 @@
             <ion-label [ngClass]="{ 'bold-font': router.url.includes('/curriculum/')}">Curriculum</ion-label>
           </ion-item>
           <ion-item-divider></ion-item-divider>
-          <ion-item-group *ngIf="moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210)"> <!--if Schedule is enabled-->
+          <ion-item-group *ngIf="moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210) || moment.resource.matrix_number[0].includes(10220)"> <!--if Schedule is enabled-->
             <ion-item (click)="clickManageMenu('schedule', schedule)" *ngFor="let schedule of schedules; index as i">
               <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
               <ion-label [ngClass]="{ 'bold-font': router.url.includes('/schedule/') && router.url.includes(schedule._id)}">Schedule {{i + 1}}</ion-label>
